[package]
name = "raytracer"
version = "0.1.0"
authors = ["Apeiros-46B <Apeiros-46B@users.noreply.github.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
	"default_fonts",
	"glow",
	"persistence",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

[profile.dev.package."*"]
opt-level = 2 # always optimize dependencies
